Sat Jul 13 13:22:19 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Stack_Recursion/Makefile:
	* tests/Stack_Recursion/Makefile.bor:
	* tests/Stack_Recursion/server.bor:
	* tests/Stack_Recursion/client.bor: Makefiles for different
	  platforms.  

	* tests/Stack_Recursion/run_test.pl: The core files should be
	  cleaned up when program exits, else the test could fill up the
	  file system and prevent other tests from running. 

	* tests/Makefile:
	* tests/Makefile.bor: Added the new test to the daily builds. 

Sat Jul 13 09:26:53 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Stack_Recursion/client.cpp:
	* tests/Stack_Recursion/Client_Task.h:
	* tests/Stack_Recursion/Client_Task.cpp (svc): 
	* tests/Stack_Recursion/Sender.cpp:
	* tests/Stack_Recursion/Sender.h:
	* tests/Stack_Recursion/server.cpp:
	* tests/Stack_Recursion/Server_Task.h:
	* tests/Stack_Recursion/Server_Task.cpp: 
	* tests/Stack_Recursion/Test.idl:
	* tests/Stack_Recursion/run_test.pl: A stress test for [BUG
	  1125], the infamous stack recursion problem.

Fri Jul 12 13:52:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Makefile.bor:
          Added AMH directory

        * examples/AMH/Makefile.bor:
          New BCB makefile to build subdirectory

        * examples/AMH/Sink_Server/*.bor:
          Added BCB makefiles for this example

Fri Jul 12 13:39:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Makefile.bor:
          Added AMH_Exceptions directory

        * tests/AMH_Exceptions/*.bor:
          Created BCB makefiles for this test

Thu Jul 11 21:10:37 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* Makefile.bor: Added a new BUILD target called "nightlybuild" to
	  simplify nightlybuild script.

Thu Jul 11 11:55:00 2002  Jaiganesh Balasubramanian  <jai@doc.ece.uci.edu>

	* orbsvcs/orbsvcs/Makefile.IFRService:
	  Updated the dependencies.

Thu Jul 11 13:29:57 2002  Jeff Parsons <parsons@cs.wustl.edu>
