@@ -13,14 +13,17 @@
 
 template<class T> TAO::Utils::RIR_Narrow<T>::_ptr_type
 TAO::Utils::RIR_Narrow<T>::narrow (CORBA::ORB_ptr orb,
-                                   char const * id,
-                                   CORBA::Environment &ACE_TRY_ENV)
+                                   char const * id
+                                   ACE_ENV_ARG_DECL)
+
 {
   CORBA::Object_var object =
-    orb->resolve_initial_references (id, ACE_TRY_ENV);
+    orb->resolve_initial_references (id
+                                     ACE_ENV_ARG_DECL);
   ACE_CHECK_RETURN (T::_nil ());
 
-  return RIR_Narrow<T>::narrow_object (object.in (), ACE_TRY_ENV);
+  return RIR_Narrow<T>::narrow_object (object.in ()
+                                       ACE_ENV_ARG_PARAMETER);
 }
 
 template<class T> TAO::Utils::RIR_Narrow<T>::_ptr_type
@@ -33,10 +36,11 @@ TAO::Utils::RIR_Narrow<T>::narrow (PortableInterceptor::ORBInitInfo_ptr info,
 }
 
 template<class T> TAO::Utils::RIR_Narrow<T>::_ptr_type
-TAO::Utils::RIR_Narrow<T>::narrow_object (CORBA::Object_ptr object,
-                                          CORBA::Environment &ACE_TRY_ENV)
+TAO::Utils::RIR_Narrow<T>::narrow_object (CORBA::Object_ptr object
+                                          ACE_ENV_ARG_DECL);
 {
-  _var_type narrowed_object = T::_narrow (object, ACE_TRY_ENV);
+  _var_type narrowed_object = T::_narrow (object
+                                          ACE_ENV_ARG_PARAMETER);
   ACE_CHECK_RETURN (T::_nil ());
 
   if (CORBA::is_nil (narrowed_object.in ()))
